kubernetes/example-dummy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: footprint
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      name: footprint
  strategy:
    rollingUpdate:
      maxUnavailable: 1
  template:
    metadata:
      labels:
        name: footprint
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: node-role.kubernetes.io/kiss
                    operator: In
                    values:
                      - Compute
      containers:
        - name: footprint
          image: quay.io/ulagbulag/footprint:latest
          imagePullPolicy: Always
          command:
            - footprint-server
          ports:
            - name: http
              protocol: TCP
              containerPort: 80
          livenessProbe:
            initialDelaySeconds: 5
            httpGet:
              path: /
              port: 80
          resources:
            requests:
              cpu: 30m
              memory: 20Mi
            limits:
              cpu: 50m
              memory: 50Mi
---
apiVersion: v1
kind: Service
metadata:
  name: footprint
  namespace: default
  labels:
    name: footprint
spec:
  type: ClusterIP
  selector:
    name: footprint
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 80
